--- a/src/output.css
+++ b/src/output.css
@@ -1015,6 +1015,14 @@ ol li {
     margin-bottom: 1.25rem;
   }
 
+  .lg\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
+  .lg\:mt-\[123px\] {
+    margin-top: 123px;
+  }
+
   .lg\:flex {
     display: flex;
   }
